--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>K</span>
-        <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>P</span>
+        <span>O</span>
+        <span>P</span>
+        <span>P</span>
+        <span>Y</span>
     </div>
   
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!</span>
+        <span>Aku ada hadiah spesial buat kamu poyyy!</span>
     </div>
     <div class="button">
         <button>
